[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
aocf = "0.1.21"
dotenv = "0.15.0"
rayon = "1.8.0"
num-integer = "0.1.45"
chrono = "0.4.31"
colored = "2.0.4"
